update parent